--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 								<img src="images/f.juice.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/menu.html#juices" class="btn2 flex-c-m txt5 ab-c-m size4">
+								<a href="menu.html#juices" class="btn2 flex-c-m txt5 ab-c-m size4">
 									juices
 								</a>
 							</div>
