--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 								<img src="images/f.juice.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="menu.html#juices" class="btn2 flex-c-m txt5 ab-c-m size4">
+								<a href="/menu.html#juices" class="btn2 flex-c-m txt5 ab-c-m size4">
 									juices
 								</a>
 							</div>
@@ -403,7 +403,7 @@
 								<img src="images/f.milkshake.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#milkshake" class="btn2 flex-c-m txt5 ab-c-m size5">
+								<a href="/menu.html#milkshake" class="btn2 flex-c-m txt5 ab-c-m size5">
 									milkshake
 								</a>
 							</div>
@@ -415,7 +415,7 @@
 								<img src="images/f.smoothie.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#smoothie" class="btn2 flex-c-m txt5 ab-c-m size5">
+								<a href="/menu.html#smoothie" class="btn2 flex-c-m txt5 ab-c-m size5">
 									smoothie
 								</a>
 							</div>
