--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 								<img src="images/f.milkshake.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/menu.html#milkshake" class="btn2 flex-c-m txt5 ab-c-m size5">
+								<a href="./menu.html#milkshake" class="btn2 flex-c-m txt5 ab-c-m size5">
 									milkshake
 								</a>
 							</div>
@@ -415,7 +415,7 @@
 								<img src="images/f.smoothie.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/menu.html#smoothie" class="btn2 flex-c-m txt5 ab-c-m size5">
+								<a href="./menu.html#smoothie" class="btn2 flex-c-m txt5 ab-c-m size5">
 									smoothie
 								</a>
 							</div>
@@ -427,7 +427,7 @@
 								<img src="images/f.Falooda.jpg">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#falooda" class="btn2 flex-c-m txt5 ab-c-m size5">
+								<a href="./menu.html#falooda" class="btn2 flex-c-m txt5 ab-c-m size5">
 									flooda
 								</a>
 							</div>
@@ -439,7 +439,7 @@
 								<img src="images/f.Avilmilk.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#avil" class="btn2 flex-c-m txt5 ab-c-m size5">
+								<a href="./menu.html#avil" class="btn2 flex-c-m txt5 ab-c-m size5">
 									avil milk
 								</a>
 							</div>
@@ -451,7 +451,7 @@
 								<img src="images/f.BlueMojito.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#mojito" class="btn2 flex-c-m txt5 ab-c-m size5">
+								<a href="./menu.html#mojito" class="btn2 flex-c-m txt5 ab-c-m size5">
 									mojito
 								</a>
 							</div>
@@ -468,7 +468,7 @@
 								<img src="images/f.soda.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#soda" class="btn2 flex-c-m txt5 ab-c-m size7">
+								<a href="./menu.html#soda" class="btn2 flex-c-m txt5 ab-c-m size7">
 									soda
 								</a>
 							</div>
@@ -480,7 +480,7 @@
 								<img src="images/f.sp.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#sp" class="btn2 flex-c-m txt5 ab-c-m size8">
+								<a href="./menu.html#sp" class="btn2 flex-c-m txt5 ab-c-m size8">
 									Specials
 								</a>
 							</div>
@@ -492,7 +492,7 @@
 								<img src="images/f.lime.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#lime" class="btn2 flex-c-m txt5 ab-c-m size9">
+								<a href="./menu.html#lime" class="btn2 flex-c-m txt5 ab-c-m size9">
 									lime
 								</a>
 							</div>
@@ -504,7 +504,7 @@
 								<img src="images/f.sandwich.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#sandwich" class="btn2 flex-c-m txt5 ab-c-m size8">
+								<a href="./menu.html#sandwich" class="btn2 flex-c-m txt5 ab-c-m size8">
 									sandwich
 								</a>
 							</div>
@@ -517,7 +517,7 @@
 								<img src="images/f.burger.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#burger" class="btn2 flex-c-m txt5 ab-c-m size8">
+								<a href="./menu.html#burger" class="btn2 flex-c-m txt5 ab-c-m size8">
 									burger
 								</a>
 							</div>
@@ -530,7 +530,7 @@
 								<img src="images/f.others.jpg" alt="IMG-MENU">
 
 								<!-- Button2 -->
-								<a href="/pato-master/menu.html#other" class="btn2 flex-c-m txt5 ab-c-m size8">
+								<a href="./menu.html#other" class="btn2 flex-c-m txt5 ab-c-m size8">
 									other
 								</a>
 							</div>
