--- a/gallery.html
+++ b/gallery.html
@@ -293,8 +293,8 @@
 
 		<div class="pagination flex-c-m flex-w p-l-15 p-r-15 m-t-24 m-b-50">
 			<a href="#" class="item-pagination flex-c-m trans-0-4 active-pagination">1</a>
-			<a href="#" class="item-pagination flex-c-m trans-0-4">2</a>
-			<a href="#" class="item-pagination flex-c-m trans-0-4">3</a>
+			<!-- <a href="#" class="item-pagination flex-c-m trans-0-4">2</a>
+			<a href="#" class="item-pagination flex-c-m trans-0-4">3</a>-->
 		</div>
 	</div>
 
@@ -396,61 +396,66 @@
 
 				
 
-					<!-- Gallery footer -->
-			
+					
 
-					<!-- Gallery footer -->
-					<div class="wrap-gallery-footer flex-w">
-						<a class="item-gallery-footer wrap-pic-w" href="images/g1.jpg" data-lightbox="gallery-footer">
-							<img src="images/g1.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/g2.jpg" data-lightbox="gallery-footer">
-							<img src="images/g2.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/g3.jpg" data-lightbox="gallery-footer">
-							<img src="images/g3.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/offer1.jpg" data-lightbox="gallery-footer">
-							<img src="images/offer1.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/offer3.jpg" data-lightbox="gallery-footer">
-							<img src="images/offer3.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/offer2.jpg" data-lightbox="gallery-footer">
-							<img src="images/offer2.jpg" alt="GALLERY">
-						</a>
-
-						<!--<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-07.jpg" data-lightbox="gallery-footer">
-							<img src="images/photo-gallery-thumb-07.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-08.jpg" data-lightbox="gallery-footer">
-							<img src="images/photo-gallery-thumb-08.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-09.jpg" data-lightbox="gallery-footer">
-							<img src="images/photo-gallery-thumb-09.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-10.jpg" data-lightbox="gallery-footer">
-							<img src="images/photo-gallery-thumb-10.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-11.jpg" data-lightbox="gallery-footer">
-							<img src="images/photo-gallery-thumb-11.jpg" alt="GALLERY">
-						</a>
-
-						<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-12.jpg" data-lightbox="gallery-footer">
-							<img src="images/photo-gallery-thumb-12.jpg" alt="GALLERY">
-						</a>-->
+					<div class="col-sm-6 col-md-4 p-t-50">
+						<!-- - -->
+						<h4 class="txt13 m-b-38">
+							Gallery
+						</h4>
+	
+						<!-- Gallery footer -->
+						<div class="wrap-gallery-footer flex-w">
+							<a class="item-gallery-footer wrap-pic-w" href="images/g1.jpg" data-lightbox="gallery-footer">
+								<img src="images/g1.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/g2.jpg" data-lightbox="gallery-footer">
+								<img src="images/g2.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/g3.jpg" data-lightbox="gallery-footer">
+								<img src="images/g3.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/offer1.jpg" data-lightbox="gallery-footer">
+								<img src="images/offer1.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/offer3.jpg" data-lightbox="gallery-footer">
+								<img src="images/offer3.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/offer2.jpg" data-lightbox="gallery-footer">
+								<img src="images/offer2.jpg" alt="GALLERY">
+							</a>
+	
+							<!--<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-07.jpg" data-lightbox="gallery-footer">
+								<img src="images/photo-gallery-thumb-07.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-08.jpg" data-lightbox="gallery-footer">
+								<img src="images/photo-gallery-thumb-08.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-09.jpg" data-lightbox="gallery-footer">
+								<img src="images/photo-gallery-thumb-09.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-10.jpg" data-lightbox="gallery-footer">
+								<img src="images/photo-gallery-thumb-10.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-11.jpg" data-lightbox="gallery-footer">
+								<img src="images/photo-gallery-thumb-11.jpg" alt="GALLERY">
+							</a>
+	
+							<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-12.jpg" data-lightbox="gallery-footer">
+								<img src="images/photo-gallery-thumb-12.jpg" alt="GALLERY">
+							</a>-->
+						</div>
+	
 					</div>
-
-				</div>
 			</div>
 		</div>
 
