--- a/about.html
+++ b/about.html
@@ -424,19 +424,19 @@ Faesto – Taste the chill.
 								<img src="images/g3.jpg" alt="GALLERY">
 							</a>
 	
-							<!--<a class="item-gallery-footer wrap-pic-w" href="images/g4.jpg" data-lightbox="gallery-footer">
-								<img src="images/g4.jpg" alt="GALLERY">
+							<a class="item-gallery-footer wrap-pic-w" href="images/offer1.jpg" data-lightbox="gallery-footer">
+								<img src="images/offer1.jpg" alt="GALLERY">
 							</a>
 	
-							<a class="item-gallery-footer wrap-pic-w" href="images/g5.jpg" data-lightbox="gallery-footer">
-								<img src="images/g5.jpg" alt="GALLERY">
+							<a class="item-gallery-footer wrap-pic-w" href="images/offer3.jpg" data-lightbox="gallery-footer">
+								<img src="images/offer3.jpg" alt="GALLERY">
 							</a>
 	
-							<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-06.jpg" data-lightbox="gallery-footer">
-								<img src="images/photo-gallery-thumb-06.jpg" alt="GALLERY">
+							<a class="item-gallery-footer wrap-pic-w" href="images/offer2.jpg" data-lightbox="gallery-footer">
+								<img src="images/offer2.jpg" alt="GALLERY">
 							</a>
 	
-							<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-07.jpg" data-lightbox="gallery-footer">
+							<!--<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-07.jpg" data-lightbox="gallery-footer">
 								<img src="images/photo-gallery-thumb-07.jpg" alt="GALLERY">
 							</a>
 	
