--- a/blog.html
+++ b/blog.html
@@ -305,7 +305,7 @@
 							<img src="images/g3.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/offer1.jpg" data-lightbox="gallery-footer">
+						<!--<a class="item-gallery-footer wrap-pic-w" href="images/offer1.jpg" data-lightbox="gallery-footer">
 							<img src="images/offer1.jpg" alt="GALLERY">
 						</a>
 
@@ -317,7 +317,7 @@
 							<img src="images/offer2.jpg" alt="GALLERY">
 						</a>
 
-						<!--<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-07.jpg" data-lightbox="gallery-footer">
+						<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-07.jpg" data-lightbox="gallery-footer">
 							<img src="images/photo-gallery-thumb-07.jpg" alt="GALLERY">
 						</a>
 
