--- a/gallery.html
+++ b/gallery.html
@@ -187,15 +187,15 @@
 	<!-- Gallery -->
 	<div class="section-gallery p-t-118 p-b-100">
 		<div class="wrap-label-gallery filter-tope-group size27 flex-w flex-sb-m m-l-r-auto flex-col-c-sm p-l-15 p-r-15 m-b-60">
-			<button class="label-gallery txt26 trans-0-4 is-actived" data-filter="*">
+			<button class="label-gallery txt26 trans-0-4 is-actived" data-filter=".all">
 				All Photo
 			</button>
 
-			<!--<button class="label-gallery txt26 trans-0-4" data-filter=".interior">
-				Interior
+			<button class="label-gallery txt26 trans-0-4" data-filter=".offer">
+				offer
 			</button>
 
-			<button class="label-gallery txt26 trans-0-4" data-filter=".food">
+			<!--<button class="label-gallery txt26 trans-0-4" data-filter=".food">
 				Food
 			</button>
 
@@ -210,7 +210,7 @@
 
 		<div class="wrap-gallery isotope-grid flex-w p-l-25 p-r-25">
 			<!-- - -->
-			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom events guests">
+			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom all">
 				<img src="images/g1.jpg" alt="IMG-GALLERY">
 
 				<div class="overlay-item-gallery trans-0-4 flex-c-m">
@@ -219,7 +219,7 @@
 			</div>
 
 			<!-- - -->
-			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom food">
+			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom all">
 				<img src="images/g2.jpg" alt="IMG-GALLERY">
 
 				<div class="overlay-item-gallery trans-0-4 flex-c-m">
@@ -228,7 +228,7 @@
 			</div>
 
 			<!-- - -->
-			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom events">
+			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom all">
 				<img src="images/g3.jpg" alt="IMG-GALLERY">
 
 				<div class="overlay-item-gallery trans-0-4 flex-c-m">
@@ -237,34 +237,34 @@
 			</div>
 
 			<!-- - -->
-			<!--<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom food">
-				<img src="images/photo-gallery-16.jpg" alt="IMG-GALLERY">
+			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom offer">
+				<img src="images/offer1.jpg" alt="IMG-GALLERY">
 
 				<div class="overlay-item-gallery trans-0-4 flex-c-m">
-					<a class="btn-show-gallery flex-c-m fa fa-search" href="images/photo-gallery-16.jpg" data-lightbox="gallery"></a>
+					<a class="btn-show-gallery flex-c-m fa fa-search" href="images/offer1.jpg" data-lightbox="gallery"></a>
 				</div>
 			</div>
 
 			
-			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom food">
-				<img src="images/photo-gallery-17.jpg" alt="IMG-GALLERY">
+			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom offer">
+				<img src="images/offer2.jpg" alt="IMG-GALLERY">
 
 				<div class="overlay-item-gallery trans-0-4 flex-c-m">
-					<a class="btn-show-gallery flex-c-m fa fa-search" href="images/photo-gallery-17.jpg" data-lightbox="gallery"></a>
+					<a class="btn-show-gallery flex-c-m fa fa-search" href="images/offer2.jpg" data-lightbox="gallery"></a>
 				</div>
 			</div>
 
 			
-			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom interior guests">
-				<img src="images/photo-gallery-18.jpg" alt="IMG-GALLERY">
+			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom offer">
+				<img src="images/offer3.jpg" alt="IMG-GALLERY">
 
 				<div class="overlay-item-gallery trans-0-4 flex-c-m">
-					<a class="btn-show-gallery flex-c-m fa fa-search" href="images/photo-gallery-18.jpg" data-lightbox="gallery"></a>
+					<a class="btn-show-gallery flex-c-m fa fa-search" href="images/offer3.jpg" data-lightbox="gallery"></a>
 				</div>
 			</div>
 
 			
-			<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom interior">
+			<!--<div class="item-gallery isotope-item bo-rad-10 hov-img-zoom interior">
 				<img src="images/photo-gallery-19.jpg" alt="IMG-GALLERY">
 
 				<div class="overlay-item-gallery trans-0-4 flex-c-m">
@@ -418,7 +418,7 @@
 								<img src="images/g3.jpg" alt="GALLERY">
 							</a>
 	
-							<a class="item-gallery-footer wrap-pic-w" href="images/offer1.jpg" data-lightbox="gallery-footer">
+							<!--<a class="item-gallery-footer wrap-pic-w" href="images/offer1.jpg" data-lightbox="gallery-footer">
 								<img src="images/offer1.jpg" alt="GALLERY">
 							</a>
 	
@@ -430,7 +430,7 @@
 								<img src="images/offer2.jpg" alt="GALLERY">
 							</a>
 	
-							<!--<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-07.jpg" data-lightbox="gallery-footer">
+							<a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-07.jpg" data-lightbox="gallery-footer">
 								<img src="images/photo-gallery-thumb-07.jpg" alt="GALLERY">
 							</a>
 	
